# lumera_crystal

./: .gitignore
lumera-crystal/backend/: .env  .env.example  DB_SCHEMA.md  Dockerfile  README.md  alembic.ini  debug_run.py  pyproject.toml
lumera-crystal/backend/alembic/: env.py
lumera-crystal/backend/alembic/versions/: 20260329_0001_initial.py  20260329_0002_admin.py  20260329_0003_media_assets.py  20260329_0004_media_contact_enhancements.py  20260403_0005_shop_core.py  20260416_0006_shop_payments.py
lumera-crystal/backend/app/: main.py
lumera-crystal/backend/app/api/: deps.py
lumera-crystal/backend/app/core/: config.py  security.py
lumera-crystal/backend/app/db/: base.py
lumera-crystal/backend/app/models/: __init__.py  admin_user.py  category.py  contact.py  conversation.py  inquiry.py  media_asset.py  newsletter.py  post.py  product.py  product_image.py  shop.py
lumera-crystal/backend/app/prompts/: house_extractor_prompt.py  house_planner_prompt.py  house_router_prompt.py
lumera-crystal/backend/app/repositories/: admin_auth_repository.py  (+14 more)
lumera-crystal/backend/config/: mail_contacts.example.json
lumera-crystal/backend/scripts/: init_admin.py  seed.py  uv_lock.sh  uv_sync.sh
lumera-crystal/backend/tests/: test_chat_history.py  test_house_agent.py  test_mail_command.py  test_shop_payment.py  test_shop_pricing.py  test_shop_recommendation.py  test_support_chat.py
lumera-crystal/logistics-service/: .env.example  README.md  pyproject.toml
lumera-crystal/logistics-service/app/: main.py
lumera-crystal/logistics-service/data/: logistics.db
(+387 files in other folders)
